--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,5 +4,6 @@
         <item>@font/merriweather</item>
         <item>@font/merriweather_bold</item>
         <item>@font/nunito_sans</item>
+        <item>@font/nunito_sans_semibold</item>
     </array>
 </resources>
