--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -98,18 +98,16 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_home_products"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constrainedHeight="true"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/filter_scroll"
-            app:spanCount="2"
-            tools:itemCount="8"
-            tools:listitem="@layout/item_product"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            >
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/filter_scroll"
+            tools:itemCount="8"
+            tools:listitem="@layout/item_product">
 
         </androidx.recyclerview.widget.RecyclerView>
 
