--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,7 +16,7 @@
             android:id="@+id/activity_home_nav_host_fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constrainedHeight="true"
             app:defaultNavHost="true"
             app:layout_constraintLeft_toLeftOf="parent"
