--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".HomeFragment">
+        tools:context=".home.HomeFragment">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar_layout"
@@ -50,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableTintMode="multiply"
-                    android:text="Button 1"
+                    android:text="@string/popular"
                     app:icon="@drawable/selector_star" />
 
                 <Button
@@ -58,7 +58,7 @@
                     style="@style/ToggleButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Button 2"
+                    android:text="@string/chair"
                     app:icon="@drawable/selector_chair" />
 
                 <Button
@@ -66,7 +66,7 @@
                     style="@style/ToggleButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Button 3"
+                    android:text="@string/table"
                     app:icon="@drawable/selector_table" />
 
                 <Button
@@ -74,7 +74,7 @@
                     style="@style/ToggleButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Button 3"
+                    android:text="@string/armchair"
                     app:icon="@drawable/selector_armchair" />
 
                 <Button
@@ -82,7 +82,7 @@
                     style="@style/ToggleButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Button 3"
+                    android:text="@string/bed"
                     app:icon="@drawable/selector_bed" />
 
                 <Button
@@ -90,7 +90,7 @@
                     style="@style/ToggleButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Button 3"
+                    android:text="@string/lamp"
                     app:icon="@drawable/selector_lamp" />
             </com.google.android.material.button.MaterialButtonToggleGroup>
 
