--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -14,7 +14,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".LoginFragment">
+            tools:context=".login_signup.LoginFragment">
 
 
             <ImageView
@@ -184,14 +184,14 @@
                         android:text="@string/already_have_account"
                         android:textColor="@color/light_gray_2"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/tv_signup"
+                        app:layout_constraintEnd_toStartOf="@+id/tv_signin"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintHorizontal_chainStyle="packed"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/btn_signup" />
 
                     <TextView
-                        android:id="@+id/tv_signup"
+                        android:id="@+id/tv_signin"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
