--- a/app/src/main/res/navigation/nav_graph_home.xml
+++ b/app/src/main/res/navigation/nav_graph_home.xml
@@ -8,14 +8,18 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.group.furniture_shopping_android_app.home.HomeFragment"
-        android:label="HomeFragment" />
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_productFragment"
+            app:destination="@id/productFragment" />
+    </fragment>
     <fragment
         android:id="@+id/favoritesFragment"
         android:name="com.group.furniture_shopping_android_app.favorites.FavoritesFragment"
         android:label="fragment_favorites"
         tools:layout="@layout/fragment_favorites" />
     <activity
-        android:id="@+id/homeActivity"
+        android:id="@+id/mainActivity"
         android:name="com.group.furniture_shopping_android_app.MainActivity"
         android:label="HomeActivity" />
     <fragment
@@ -28,4 +32,14 @@
         android:name="com.group.furniture_shopping_android_app.profile.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/productFragment"
+        android:name="com.group.furniture_shopping_android_app.product_details.ProductDetailsFragment"
+        android:label="fragment_product2"
+        tools:layout="@layout/fragment_product" >
+        <argument
+            android:name="product_id"
+            app:argType="integer"
+            android:defaultValue="0" />
+    </fragment>
 </navigation>
