--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -17,7 +17,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingBottom="100dp">
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/fragment_product_image"
@@ -25,8 +26,31 @@
                     android:layout_height="455dp"
                     android:layout_marginStart="52dp"
                     android:background="@color/black"
+                    android:scaleType="centerCrop"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:shapeAppearanceOverlay="@style/ImageViewRoundedBottomLeft" />
+
+                <Button
+                    android:id="@+id/btn_back"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="52dp"
+                    android:backgroundTint="@color/white"
+                    android:elevation="10dp"
+                    android:insetLeft="0dp"
+                    android:insetTop="0dp"
+                    android:insetRight="0dp"
+                    android:insetBottom="0dp"
+                    app:icon="@drawable/ic_arrow_left"
+                    app:iconGravity="textStart"
+                    app:iconPadding="0dp"
+                    app:iconTint="@null"
+                    app:layout_constraintLeft_toLeftOf="@id/fragment_product_image"
+                    app:layout_constraintRight_toLeftOf="@id/fragment_product_image"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:shapeAppearanceOverlay="@style/ImageViewRounded10"
+                    app:rippleColor="@color/light_gray_3"/>
 
                 <TextView
                     android:id="@+id/fragment_product_name"
@@ -46,11 +70,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/nunito_sans_bold"
+                    android:text="$ 50"
                     android:textColor="@color/font_black"
                     android:textSize="30sp"
                     app:layout_constraintStart_toStartOf="@id/fragment_product_name"
-                    app:layout_constraintTop_toBottomOf="@id/fragment_product_name"
-                    android:text="$ 50" />
+                    app:layout_constraintTop_toBottomOf="@id/fragment_product_name" />
 
                 <ImageView
                     android:id="@+id/fragment_product_star"
@@ -68,11 +92,11 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/nunito_sans_bold"
+                    tools:text="4.5"
                     android:textColor="@color/font_black"
                     android:textSize="18sp"
                     app:layout_constraintStart_toEndOf="@id/fragment_product_star"
-                    app:layout_constraintTop_toBottomOf="@id/fragment_product_price"
-                    android:text="4.5" />
+                    app:layout_constraintTop_toBottomOf="@id/fragment_product_price" />
 
                 <TextView
                     android:id="@+id/fragment_product_reviews_count"
@@ -80,19 +104,19 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:fontFamily="@font/nunito_sans_semibold"
+                    tools:text="(50 reviews)"
                     android:textColor="@color/light_gray_2"
                     app:layout_constraintBaseline_toBaselineOf="@+id/fragment_product_rating"
-                    app:layout_constraintStart_toEndOf="@id/fragment_product_rating"
-                    android:text="(50 reviews)" />
+                    app:layout_constraintStart_toEndOf="@id/fragment_product_rating" />
 
                 <TextView
                     android:id="@+id/fragment_product_description"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/fragment_product_rating"
-                    android:text="Minimal Stand is made of by natural wood. The design that is very simple and minimal. This is truly one of the best furnitures in any family for now. With 3 different colors, you can easily select the best match for your home. "
+                    tools:text="Minimal Stand is made of by natural wood. The design that is very simple and minimal. This is truly one of the best furnitures in any family for now. With 3 different colors, you can easily select the best match for your home. "
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@id/fragment_product_price"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                    app:layout_constraintTop_toBottomOf="@id/fragment_product_rating" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
@@ -100,25 +124,25 @@
             android:id="@+id/fragment_product_marker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/ic_marker_2"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="30dp"
             android:layout_marginStart="25dp"
-            app:layout_constraintEnd_toStartOf="@id/btn_add_to_cart"/>
+            android:layout_marginBottom="30dp"
+            android:src="@drawable/ic_marker_2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_add_to_cart"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/btn_add_to_cart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="25dp"
+            android:paddingHorizontal="74dp"
+            android:paddingVertical="16dp"
             android:text="@string/add_to_cart"
-            tools:layout_editor_absoluteX="159dp"
-            tools:layout_editor_absoluteY="701dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/fragment_product_marker"
             app:layout_constraintTop_toTopOf="@id/fragment_product_marker"
-            android:paddingVertical="16dp"
-            android:paddingHorizontal="74dp"
-            android:layout_marginEnd="25dp"/>
+            tools:layout_editor_absoluteX="159dp"
+            tools:layout_editor_absoluteY="701dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
